update rest documentation
